--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -23,7 +23,7 @@ import { Card, CardGrid, LinkButton } from '@astrojs/starlight/components';
 This documentation is designed to help you integrate, extend, and deploy the LunivCore engine effectively.
 
 <CardGrid stagger>
-  <Card title="Build the Engine" icon="engine">
+  <Card title="Build the Engine" icon="information">
     Learn how to compile the bi_tool executable using the provided Makefile and link the Lua runtime library.
 	<LinkButton
 	href="https://docs.astro.build"
@@ -40,7 +40,7 @@ This documentation is designed to help you integrate, extend, and deploy the Lun
   <Card title="Write a Report" icon="document">
     Start creating your first BI-as-Code reports using the BI.new() and dataset:plot() DSL syntax in the src/lua directory.
   </Card>
-  <Card title="File Structure" icon="folder">
+  <Card title="File Structure" icon="seti:folder">
     Review the directory structure: src/C/ for engine logic and src/lua/ for user DSL scripts.
   </Card>
   <Card title="Contribution Guide" icon="setting">
