--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: LunivCore
 description: C/Lua Business Intelligence Engine from Luniv Consulting.
 template: splash
 hero:
-  tagline: A brand new BI-as-Code DSL built on a C/Lua core.
+  tagline: A lightweight, expressive, efficient, extensible, statically typed BI language with a Lua-inspired syntax, powered by a compact C/Lua execution core.
   image:
     file: ../../assets/houston.webp
   actions:
@@ -18,7 +18,7 @@ hero:
 
 import { Card, CardGrid, LinkButton } from '@astrojs/starlight/components';
 
-## Next Steps for LunivCore Developers
+## What is LunivCore?
 
 This documentation is designed to help you integrate, extend, and deploy the LunivCore engine effectively.
 
@@ -34,7 +34,7 @@ This documentation is designed to help you integrate, extend, and deploy the Lun
   Get Started
 </LinkButton>
   </Card>
-  <Card title="Extend the C API" icon="pencil">
+  <Card title="Business Intelligence As Code" icon="pencil">
     Dive into Userdata and Metatables to add new high-performance data operations (like CSV loading or sorting) to the C core.
   </Card>
   <Card title="Write a Report" icon="document">
@@ -59,3 +59,32 @@ LunivCore leverages the performance benefits of C while providing the scripting 
 # Need Extra Help?
 
 LunivCore is built and maintained by the passionate dev team at [Luniv Consulting](https://luniv.tech/).
+
+# Support or Invest
+
+<CardGrid>
+  <Card title="For Investors" icon="information">
+    Explore how LunivCore enables a programmable analytics engine built on a compact C/Lua runtime. Review the technical roadmap, commercial applications, and opportunities for early investment.
+    <LinkButton
+      href="/invest/roadmap"
+      variant="secondary"
+      icon="right-arrow"
+      iconPlacement="end"
+    >
+      Learn More
+    </LinkButton>
+  </Card>
+
+  <Card title="Support the Project" icon="star">
+    Contribute to the open-source ecosystem by starring the repository, submitting improvements, or joining community development efforts.
+    <LinkButton
+      href="https://github.com/sieep-coding/lunivcore"
+      variant="secondary"
+      icon="right-arrow"
+      iconPlacement="end"
+    >
+      Contribute
+    </LinkButton>
+  </Card>
+</CardGrid>
+
