--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -25,14 +25,6 @@ This documentation is designed to help you integrate, extend, and deploy the Lun
 <CardGrid stagger>
   <Card title="Build the Engine" icon="information">
     Learn how to compile the bi_tool executable using the provided Makefile and link the Lua runtime library.
-	<LinkButton
-	href="https://docs.astro.build"
-	variant="secondary"
-	icon="right-arrow"
-	iconPlacement="end"
-	>
-  Get Started
-</LinkButton>
   </Card>
   <Card title="Business Intelligence As Code" icon="pencil">
     Dive into Userdata and Metatables to add new high-performance data operations (like CSV loading or sorting) to the C core.
@@ -48,10 +40,10 @@ This documentation is designed to help you integrate, extend, and deploy the Lun
   </Card>
 </CardGrid>
 
-### Deliver High-Impact Data Products
+# Deliver High-Impact Data Products
 Combine data visualization components with an intuitive layout engine to build **responsive, interactive data products**. Easily publish them internally for your teams, share them directly with customers, or seamlessly embed them into any existing application.
 
-<Tabs>
+<Tabs starlight>
     <TabItem label="Articles">
         Transform complex data stories into **stunning, visual articles** for news, deep research, or social science publication. Utilize narrative visualization features to guide your readers through your insights.
     </TabItem>
@@ -65,7 +57,7 @@ Combine data visualization components with an intuitive layout engine to build *
 
 ---
 
-### Core Concepts
+## Core Concepts
 
 LunivCore leverages the **performance benefits of C** while providing the **scripting flexibility of Lua** for a unique BI-as-Code experience.
 
@@ -86,7 +78,7 @@ LunivCore leverages the **performance benefits of C** while providing the **scri
 
 ---
 
-### LunivCore Engine
+# LunivCore Engine
 
 The LunivCore engine is built for **high-performance and enterprise-grade scaling**, combining speed with transparency.
 
@@ -94,8 +86,9 @@ The LunivCore engine is built for **high-performance and enterprise-grade scalin
     <Card title="Blazing Fast Performance" icon="rocket">
         Achieve **Subsecond Queries**, allowing you to analyze billions of rows of data in moments.
         <LinkButton
+			class="galaxy-button"
             href="/reference/example/"
-            variant="primary"
+            variant="minimal"
             icon="right-arrow"
             iconPlacement="end"
         >
@@ -107,7 +100,7 @@ The LunivCore engine is built for **high-performance and enterprise-grade scalin
         The core execution engine of LunivCore is and will always remain **open-source**.
         <LinkButton
             href="https://github.com/sieep-coding/lunivcore"
-            variant="secondary"
+            variant="minimal"
             icon="right-arrow"
             iconPlacement="end"
         >
@@ -118,7 +111,7 @@ The LunivCore engine is built for **high-performance and enterprise-grade scalin
 
 ---
 
-# Installation For Devlopers
+## Installation For Devlopers
 
 Requires git, build tools, and a C compiler.
 
@@ -152,14 +145,14 @@ LunivCore is built and maintained by the passionate dev team at [Luniv Consultin
 
 <Aside>Get started right away by filling out our [contact form](https://www.luniv.tech/contact).</Aside>
 
-# Support or Invest
+## Support or Invest
 
 <CardGrid>
   <Card title="For Investors" icon="information">
     Explore how LunivCore enables a programmable analytics engine built on a compact C/Lua runtime. Review the technical roadmap, commercial applications, and opportunities for early investment.
     <LinkButton
       href="/invest/roadmap"
-      variant="primary"
+      variant="minimal"
       icon="right-arrow"
       iconPlacement="end"
     >
