--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -3,7 +3,7 @@ title: LunivCore, Business Intelligence As Code
 description: C/Lua Business Intelligence Engine from Luniv Consulting.
 template: splash
 hero:
-  tagline: A lightweight, expressive, efficient, extensible BI language with a Lua-inspired syntax, powered by a compact C/Lua execution core.
+  tagline: A lightweight, expressive, efficient, extensible BI language with a Markdown-inspired syntax, powered by a compact C/Lua execution core.
   image:
     file: ../../assets/houston.webp
   actions:
