--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -129,11 +129,11 @@ Requires git, build tools, and a C compiler.
 	```
 3. Run the installation command
 	```bash
-	make install
+	make
 	```
 4. Run the installation command
 	```bash
-	lunivcore examples/helloworld.lcore
+	./lcore examples/helloworld.lcore
 	```
 </Steps>
 
