docs focused instead

--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -4,7 +4,7 @@ description: C/Lua Business Intelligence Engine from Luniv Consulting.
 hero:
   tagline: A lightweight, expressive, efficient, extensible BI language with a Markdown-inspired syntax, powered by a compact C/Lua execution core.
   actions:
-    - text: Read the Docs
+    - text: Get Started
       link: /reference/example/
       icon: right-arrow
     - text: Book a Demo
