--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -5,10 +5,10 @@ hero:
   tagline: A lightweight, expressive, efficient, extensible BI language with a Markdown-inspired syntax, powered by a compact C/Lua execution core.
   actions:
     - text: Get Started
-      link: /reference/example/
+      link: getting-started/getting-started
       icon: right-arrow
     - text: Book a Demo
-      link: https://luniv.tech/contact
+      link: https://calendly.com/nstamb6/30min
       icon: external
       variant: minimal
 ---
@@ -139,7 +139,7 @@ The LunivCore engine is built for **high-performance and enterprise-grade scalin
 
 ---
 
-## Installation For Devlopers
+## For Nerds
 
 Requires git, build tools, and a C compiler.
 
@@ -201,4 +201,24 @@ LunivCore is built and maintained by the passionate dev team at [Luniv Consultin
   </Card>
 </CardGrid>
 
- 
+ #### But Why?
+
+<CardGrid>
+  <Card title="Why LunivCore" icon="information">
+   LunivCore is being developed by a BI professional, who struggled with the typical enterprise BI tools like Tableau or PowerBI. 
+   
+   This allowed for LunivCore to be created, a new way for software engineers to analyze data that feels comfortable to them.
+  </Card>
+
+  <Card title="Learn More" icon="star">
+    Contribute to the open-source ecosystem by starring the repository, submitting improvements, or joining community development efforts.
+    <LinkButton
+      href="https://github.com/sieep-coding/lunivcore"
+      variant="minimal"
+      icon="right-arrow"
+      iconPlacement="end"
+    >
+      Contribute
+    </LinkButton>
+  </Card>
+</CardGrid>
