--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -68,6 +68,28 @@ This documentation is designed to help you integrate, extend, and deploy the Lun
   </Card>
 </CardGrid>
 
+ # But Why?
+
+<CardGrid>
+  <Card title="Why LunivCore" icon="information">
+   LunivCore is being developed by a BI professional, who struggled with the typical enterprise BI tools like Tableau or PowerBI. 
+   
+   This allowed for LunivCore to be created, a new way for software engineers to analyze data that feels comfortable to them.
+  </Card>
+
+  <Card title="Learn More" icon="star">
+    Contribute to the open-source ecosystem by starring the repository, submitting improvements, or joining community development efforts.
+    <LinkButton
+      href="https://github.com/sieep-coding/lunivcore"
+      variant="minimal"
+      icon="right-arrow"
+      iconPlacement="end"
+    >
+      Contribute
+    </LinkButton>
+  </Card>
+</CardGrid>
+
 # Deliver High-Impact Data Products
 Combine data visualization components with an intuitive layout engine to build **responsive, interactive data products**. Easily publish them internally for your teams, share them directly with customers, or seamlessly embed them into any existing application.
 
@@ -189,28 +211,6 @@ LunivCore is built and maintained by the passionate dev team at [Luniv Consultin
   </Card>
 
   <Card title="Support the Project" icon="star">
-    Contribute to the open-source ecosystem by starring the repository, submitting improvements, or joining community development efforts.
-    <LinkButton
-      href="https://github.com/sieep-coding/lunivcore"
-      variant="minimal"
-      icon="right-arrow"
-      iconPlacement="end"
-    >
-      Contribute
-    </LinkButton>
-  </Card>
-</CardGrid>
-
- #### But Why?
-
-<CardGrid>
-  <Card title="Why LunivCore" icon="information">
-   LunivCore is being developed by a BI professional, who struggled with the typical enterprise BI tools like Tableau or PowerBI. 
-   
-   This allowed for LunivCore to be created, a new way for software engineers to analyze data that feels comfortable to them.
-  </Card>
-
-  <Card title="Learn More" icon="star">
     Contribute to the open-source ecosystem by starring the repository, submitting improvements, or joining community development efforts.
     <LinkButton
       href="https://github.com/sieep-coding/lunivcore"
