--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -7,7 +7,7 @@ hero:
   tagline: A lightweight, expressive, efficient, extensible BI language with a Markdown-inspired syntax, powered by a compact C/Lua execution core.
   actions:
     - text: Get Started
-      link: getting-started/getting-started
+      link: docs
       icon: right-arrow
     - text: Book a Demo
       link: https://calendly.com/nstamb6/30min
