--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -116,6 +116,23 @@ LunivCore is built for engineering teams who demand **source code** rigor applie
 
     sales:plot()
     ```
+    
+    ```lua
+    local dataset = BI.new("Q1 Aggregation KPIs")
+
+    dataset:add("North", 340)
+    dataset:add("South", 210)
+
+    print("Total:", dataset:sum())
+    print("Average:", dataset:avg())
+    print("Min:", dataset:min())   
+    print("Max:", dataset:max())
+    print("Count:", dataset:count())
+
+    print("Max - Min:", dataset:max() - dataset:min())
+
+    dataset:plot()
+    ```
     </TabItem>
     </Tabs>
 
