--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -19,7 +19,7 @@ import { Aside, Card, CardGrid, LinkButton, Steps, Tabs, TabItem } from '@astroj
 
 # LunivCore: Business Intelligence As Code
 
-## The Engineer's BI Engine.
+#### The Engineer's BI Engine.
 
 LunivCore is the **Developer First** solution for analytics, bringing the rigor of **Source Code Management** to Business Intelligence. 
 
