--- a/docs/docs/src/content/docs/index.mdx
+++ b/docs/docs/src/content/docs/index.mdx
@@ -12,6 +12,10 @@ hero:
     - text: Book a Demo
       link: https://calendly.com/nstamb6/30min
       icon: external
+      variant: secondary
+    - text: Created By Luniv Technology
+      link: https://luniv.tech
+      icon: external
       variant: minimal
 ---
 
